--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ test: &test
 
 production:
   adapter: mongodb
+  uri: mongodb://psmisc:stayclassyyo@flame.mongohq.com:27082/wickedlist
   host: flame.mongohq.com
   port: 27082
   database: wickedlist
